# beatrice

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README-Docker.md  README.md  TODO.md  beatrice_cli  docker-compose.yml  package.json
.github/workflows/: ci.yml
cmake/: BeatriceConfig.cmake.in
docs/: CMakeLists.txt  architecture.md
examples/: CMakeLists.txt  af_packet_example.cpp  config_example.cpp  dpdk_example.cpp  parser_example.cpp  performance_test.cpp  plugin_test.cpp  pmd_example.cpp  simple_plugin.cpp  telemetry_test.cpp  zero_copy_dma_test.cpp
include/beatrice/: AF_PacketBackend.hpp  AF_XDPBackend.hpp  BeatriceContext.hpp  Config.hpp  DPDKBackend.hpp  Error.hpp  ICaptureBackend.hpp  IPacketPlugin.hpp  Logger.hpp  Metrics.hpp  PMDBackend.hpp  Packet.hpp  PacketFilter.hpp  PluginManager.hpp  Telemetry.hpp  ThreadPool.hpp  XDPLoader.hpp  version.hpp  version.hpp.in
include/parser/: BuiltinProtocols.hpp  FieldDefinition.hpp  ParserResult.hpp  ProtocolParser.hpp  ProtocolRegistry.hpp
src/: AF_PacketBackend.cpp  AF_XDPBackend.cpp  BeatriceContext.cpp  Config.cpp  DPDKBackend.cpp  Error.cpp  Logger.cpp  Metrics.cpp  PMDBackend.cpp  Packet.cpp  PacketFilter.cpp  PluginManager.cpp  Telemetry.cpp  ThreadPool.cpp  XDPLoader.cpp  beatrice_cli.cpp  main.cpp  xdp_program.c
src/parser/: FieldDefinition.cpp  ParserResult.cpp  ProtocolParser.cpp  ProtocolRegistry.cpp
tests/: CMakeLists.txt  performance_tests.cpp  test_af_xdp_backend.cpp  test_beatrice_context.cpp  test_config.cpp  test_error.cpp  test_metrics.cpp  test_packet.cpp  test_plugin_manager.cpp
